# demo-esp32

./: README.md
adc/: Cargo.toml
adc/src/: main.rs
demo-ble-no-std/: Cargo.toml
demo-ble-no-std/src/: main.rs
demo-embassy/: Cargo.toml  diagram.json  wokwi.toml
demo-embassy/.devcontainer/: devcontainer.json
demo-embassy/docs/: README.md
demo-embassy/scripts/: flash.sh
demo-embassy/src/: main.rs
demo-espnow/: Cargo.toml  wokwi.toml
demo-espnow/.devcontainer/: devcontainer.json
demo-espnow/docs/: README.md
demo-espnow/scripts/: flash.sh
demo-espnow/src/: main.rs
demo-mpu6050/: Cargo.toml  index.html
demo-mpu6050/src/: main.rs
demo-mqtt/: Cargo.toml  README.md  wokwi.toml
demo-mqtt-app/: README.md  package.json
demo-mqtt-app/src/: App.vue
demo-mqtt-app/src-tauri/: Cargo.toml  tauri.conf.json
demo-mqtt-app/src-tauri/src/: lib.rs  main.rs
demo-mqtt/.devcontainer/: devcontainer.json
demo-mqtt/docs/: README.md
demo-mqtt/scripts/: flash.sh
demo-mqtt/src/: main.rs
demo-ota/demo-ota-no-std/: Cargo.toml
demo-ota/demo-ota-no-std/src/: main.rs
demo-ota/demo-ota-std/: Cargo.toml
demo-ota/demo-ota-std/.cargo/: config.toml
demo-ota/demo-ota-std/src/: main.rs
demo-ota/ota-1/: Cargo.toml
demo-ota/ota-1/src/: main.rs
demo-ota/ota-2/: Cargo.toml
demo-ota/ota-2/src/: main.rs
demo-ssd1306/: Cargo.toml
demo-ssd1306/src/: main.rs
demo-wifi-ap-no-std/: Cargo.toml
demo-wifi-ap-no-std/src/: main.rs
demo-ws/: Cargo.toml  game.html  sdkconfig.defaults
demo-ws/src/: main.rs
demo-ws2812/: Cargo.toml
demo-ws2812/src/: main.rs
demo_wifi/: Cargo.toml
demo_wifi/src/: main.rs
rust-mqtt-fix/: rust-toolchain.toml
sd-card/: Cargo.toml
sd-card/.cargo/: config.toml
sd-card/src/: main.rs
uart/: Cargo.toml
uart/.cargo/: config.toml
uart/src/: main.rs
