[package]
name = "demo-mqtt"
version = "0.1.0"
authors = ["LittleGuest <2190975784@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.17.0", features = [
  "esp32c3",
  # "rt",
  # "vectored",
  # "defmt",
  "async",
  "embassy",
  # "embassy-executor-interrupt",
  "embassy-executor-thread",
  "embassy-integrated-timers",
  "embassy-time-timg0",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.5.0", features = [
  "esp32c3",
  "phy-enable-usb",
  "utils",
  "wifi",
  "wifi-default",
  "async",
  "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
embassy-executor = { version = "0.5.0", features = [
  "task-arena-size-40960",
  # "nightly",
  # "arch-riscv32",
  # "integrated-timers",
  # "executor-thread",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "tcp", "udp", "dns"] }
embedded-io-async = "0.6.1"
serde_json = { version = "1.0.116", default-features = false, features = [
  "alloc",
] }
rust-mqtt = { path = "../rust-mqtt-fix", default-features = false, features = [
  "no_std",
] }
embedded-hal = "1.0.0"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
